--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "build:css": "node-sass public/stylesheets/*.scss --output public/stylesheets"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -16,8 +17,12 @@
     "johnny-five": "^0.9.26",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
+    "oled-js": "^4.0.1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5",
     "websocket": "^1.0.22"
+  },
+  "devDependencies": {
+    "node-sass": "^3.4.2"
   }
 }
