--- a/package.json
+++ b/package.json
@@ -1,30 +1,21 @@
 {
   "name": "mkr1000",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "build:css": "node-sass public/stylesheets/*.scss --output public/stylesheets"
+    "build:css": "npx node-sass public/stylesheets/*.scss --output public/stylesheets"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "express-ws": "^1.0.0",
-    "firmata": "^0.8.4",
-    "jade": "~1.11.0",
-    "johnny-five": "^0.9.26",
-    "morgan": "~1.6.1",
-    "node-pixel": "^0.6.0",
-    "node-sass-middleware": "0.8.0",
-    "oled-js": "^4.0.1",
-    "rethinkdb": "^2.2.2",
-    "serve-favicon": "~2.3.0",
-    "socket.io": "^1.4.5",
-    "websocket": "^1.0.22"
-  },
-  "devDependencies": {
-    "node-sass": "^3.4.2"
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "johnny-five": "^2.0.0",
+    "morgan": "^1.10.0",
+    "node-sass": "^4.14.1",
+    "node-sass-middleware": "^0.11.0",
+    "pug": "^3.0.0",
+    "rethinkdb": "^2.4.2",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0"
   }
 }
